fix: harden alpha.3 metadata and durable contracts