@@ -3,6 +3,7 @@ package dev.provenance.probe;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
@@ -16,8 +17,10 @@ import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HexFormat;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
@@ -80,6 +83,7 @@ class PluginMetadataDiscoveryTest {
         name: PaperTarget
         version: 1.0.0
         main: example.PaperTarget
+        api-version: '1.21'
         dependencies:
           bootstrap:
             BootstrapDefaultRequired:
@@ -109,6 +113,97 @@ class PluginMetadataDiscoveryTest {
     assertEquals(
         List.of("BootstrapOptionalAfter", "ServerRequiredAfter"),
         descriptor.loadBeforeDependencies());
+  }
+
+  @Test
+  void paperDescriptorTakesPrecedenceWhenBothDescriptorsExist() throws IOException {
+    LinkedHashMap<String, byte[]> entries = new LinkedHashMap<>();
+    entries.put(
+        "plugin.yml",
+        """
+        name: LegacyIdentity
+        version: 1.0.0
+        main: example.LegacyIdentity
+        depend: [LegacyDependency]
+        """
+            .getBytes(StandardCharsets.UTF_8));
+    entries.put(
+        "paper-plugin.yml",
+        """
+        name: PaperIdentity
+        version: 2.0.0
+        main: example.PaperIdentity
+        api-version: '1.21'
+        dependencies:
+          server:
+            PaperDependency:
+              required: true
+        """
+            .getBytes(StandardCharsets.UTF_8));
+
+    PluginDescriptor descriptor =
+        new PluginMetadataDiscovery().inspect(writeJar("both.jar", entries)).descriptor();
+
+    assertEquals("PaperIdentity", descriptor.name());
+    assertEquals("2.0.0", descriptor.version());
+    assertEquals("example.PaperIdentity", descriptor.mainClass());
+    assertEquals(List.of("PaperDependency"), descriptor.requiredDependencies());
+  }
+
+  @Test
+  void rejectsNamesPaperWillNotLoad() throws IOException {
+    writeJar(
+        "space.jar",
+        "plugin.yml",
+        """
+        name: Space Plugin
+        version: 1.0.0
+        main: example.SpacePlugin
+        """);
+    writeJar(
+        "reserved.jar",
+        "plugin.yml",
+        """
+        name: PaPeR
+        version: 1.0.0
+        main: example.ReservedPlugin
+        """);
+
+    PluginMetadataDiscovery discovery = new PluginMetadataDiscovery();
+
+    assertEquals(
+        List.of("name contains unsupported characters"),
+        discovery.inspect(plugins.resolve("space.jar")).issues());
+    assertEquals(
+        List.of("name contains unsupported characters"),
+        discovery.inspect(plugins.resolve("reserved.jar")).issues());
+  }
+
+  @Test
+  void validatesPaperApiVersionFloorAndPreservesValidRawPatch() throws IOException {
+    writeJar("paper-api-missing.jar", "paper-plugin.yml", paperApiMetadata(null));
+    writeJar("paper-api-malformed.jar", "paper-plugin.yml", paperApiMetadata("1.x"));
+    writeJar("paper-api-below-floor.jar", "paper-plugin.yml", paperApiMetadata("1.18.2"));
+    writeJar("paper-api-floor.jar", "paper-plugin.yml", paperApiMetadata("1.19.0"));
+    writeJar("paper-api-future.jar", "paper-plugin.yml", paperApiMetadata("999.0"));
+
+    PluginMetadataDiscovery discovery = new PluginMetadataDiscovery();
+
+    assertEquals(
+        List.of("api-version is required"),
+        discovery.inspect(plugins.resolve("paper-api-missing.jar")).issues());
+    assertEquals(
+        List.of("api-version is invalid or exceeds 32 characters"),
+        discovery.inspect(plugins.resolve("paper-api-malformed.jar")).issues());
+    assertEquals(
+        List.of("api-version is invalid or exceeds 32 characters"),
+        discovery.inspect(plugins.resolve("paper-api-below-floor.jar")).issues());
+    assertEquals(
+        "1.19.0",
+        discovery.inspect(plugins.resolve("paper-api-floor.jar")).descriptor().apiVersion());
+    assertEquals(
+        "999.0",
+        discovery.inspect(plugins.resolve("paper-api-future.jar")).descriptor().apiVersion());
   }
 
   @Test
@@ -148,6 +243,7 @@ class PluginMetadataDiscoveryTest {
         name: PaperTarget
         version: 1.0.0
         main: example.PaperTarget
+        api-version: '1.21'
         dependencies:
           client:
             UnknownScope: {}
@@ -276,6 +372,112 @@ class PluginMetadataDiscoveryTest {
   }
 
   @Test
+  void enforcesFinalMergedDependencyBoundaries() throws IOException {
+    writeJar(
+        "required-at-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("depend", 1, 31, true, false, 32, true, false));
+    writeJar(
+        "required-over-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("depend", 1, 31, true, false, 33, true, false));
+    writeJar(
+        "soft-at-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("softdepend", 1, 31, false, false, 32, false, false));
+    writeJar(
+        "soft-over-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("softdepend", 1, 31, false, false, 33, false, false));
+    writeJar(
+        "load-at-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("loadbefore", 1, 32, true, true, 31, false, true));
+    writeJar(
+        "load-over-limit.jar",
+        "paper-plugin.yml",
+        paperMetadataWithDependencies("loadbefore", 1, 32, true, true, 32, false, true));
+
+    PluginMetadataDiscovery discovery = new PluginMetadataDiscovery();
+
+    assertEquals(
+        64,
+        discovery
+            .inspect(plugins.resolve("required-at-limit.jar"))
+            .descriptor()
+            .requiredDependencies()
+            .size());
+    assertEquals(
+        List.of("dependencies produce more than 64 required entries"),
+        discovery.inspect(plugins.resolve("required-over-limit.jar")).issues());
+    assertEquals(
+        64,
+        discovery
+            .inspect(plugins.resolve("soft-at-limit.jar"))
+            .descriptor()
+            .softDependencies()
+            .size());
+    assertEquals(
+        List.of("dependencies produce more than 64 soft entries"),
+        discovery.inspect(plugins.resolve("soft-over-limit.jar")).issues());
+    assertEquals(
+        64,
+        discovery
+            .inspect(plugins.resolve("load-at-limit.jar"))
+            .descriptor()
+            .loadBeforeDependencies()
+            .size());
+    assertEquals(
+        List.of("dependencies produce more than 64 load-before entries"),
+        discovery.inspect(plugins.resolve("load-over-limit.jar")).issues());
+  }
+
+  @Test
+  void rejectsUnpairedSurrogatesAndCountsAstralCharacters() throws IOException {
+    String emoji = "\uD83D\uDE00";
+    writeJar(
+        "astral-at-limit.jar",
+        "plugin.yml",
+        freeTextMetadata("version", "\"" + emoji.repeat(128) + "\""));
+    writeJar(
+        "astral-over-limit.jar",
+        "plugin.yml",
+        freeTextMetadata("version", "\"" + emoji.repeat(129) + "\""));
+
+    PluginMetadataDiscovery discovery = new PluginMetadataDiscovery();
+    assertEquals(
+        emoji.repeat(128),
+        discovery.inspect(plugins.resolve("astral-at-limit.jar")).descriptor().version());
+    assertEquals(
+        List.of("version is invalid or exceeds 128 characters"),
+        discovery.inspect(plugins.resolve("astral-over-limit.jar")).issues());
+
+    for (String surrogate : List.of("\\uD800", "\\uDC00")) {
+      String suffix = surrogate.endsWith("800") ? "high" : "low";
+      assertFreeTextIssue(
+          discovery,
+          suffix + "-version.jar",
+          freeTextMetadata("version", "\"" + surrogate + "\""),
+          "version is invalid or exceeds 128 characters");
+      assertFreeTextIssue(
+          discovery,
+          suffix + "-api.jar",
+          freeTextMetadata("api-version", "\"" + surrogate + "\""),
+          "api-version is invalid or exceeds 32 characters");
+      assertFreeTextIssue(
+          discovery,
+          suffix + "-permission.jar",
+          freeTextMetadata("permissions", "\n  \"" + surrogate + "\": {}"),
+          "permissions keys must be bounded non-empty strings");
+      assertFreeTextIssue(
+          discovery,
+          suffix + "-command.jar",
+          freeTextMetadata("commands", "\n  \"" + surrogate + "\": {}"),
+          "commands keys must be bounded non-empty strings");
+    }
+  }
+
+  @Test
   void rejectsDuplicateDeclarationsAliasesAndExcessiveNesting() throws IOException {
     writeJar(
         "duplicates.jar",
@@ -358,17 +560,99 @@ class PluginMetadataDiscoveryTest {
   }
 
   @Test
-  void classifiesTamperedSignedJarAsInvalid() throws Exception {
+  void boundsJarEntryCountAndActualExpandedBytes() throws Exception {
+    byte[] metadata =
+        """
+        name: BoundedPlugin
+        version: 1.0.0
+        main: example.BoundedPlugin
+        """
+            .getBytes(StandardCharsets.UTF_8);
+    byte[] compressedExpansion = new byte[1024];
+    Path expanded =
+        writeJar(
+            "expanded.jar",
+            Map.of("plugin.yml", metadata, "compressed-resource.bin", compressedExpansion));
+    assertTrue(Files.size(expanded) < metadata.length + compressedExpansion.length);
+
+    MetadataInspection atByteBoundaries =
+        new PluginMetadataDiscovery(2, compressedExpansion.length, metadata.length + 1024L)
+            .inspect(expanded);
+    assertEquals(MetadataStatus.VALID, atByteBoundaries.status());
+
+    assertVerificationLimit(
+        new PluginMetadataDiscovery(2, compressedExpansion.length - 1L, Long.MAX_VALUE)
+            .inspect(expanded));
+    assertVerificationLimit(
+        new PluginMetadataDiscovery(2, Long.MAX_VALUE, metadata.length + 1023L)
+            .inspect(expanded));
+
+    LinkedHashMap<String, byte[]> entries = new LinkedHashMap<>();
+    entries.put("plugin.yml", metadata);
+    entries.put("first/", new byte[0]);
+    entries.put("second/", new byte[0]);
+    Path crowded = writeJar("crowded.jar", entries);
+    assertEquals(
+        MetadataStatus.VALID,
+        new PluginMetadataDiscovery(3, 1024, 4096).inspect(crowded).status());
+    assertVerificationLimit(new PluginMetadataDiscovery(2, 1024, 4096).inspect(crowded));
+
+    Path directoryPayload =
+        writeJar(
+            "directory-payload.jar",
+            Map.of("plugin.yml", metadata, "payload/", compressedExpansion));
+    assertEquals(
+        MetadataStatus.VALID,
+        new PluginMetadataDiscovery(2, compressedExpansion.length, metadata.length + 1024L)
+            .inspect(directoryPayload)
+            .status());
+    assertVerificationLimit(
+        new PluginMetadataDiscovery(2, compressedExpansion.length - 1L, Long.MAX_VALUE)
+            .inspect(directoryPayload));
+  }
+
+  @Test
+  void rejectsDuplicateJarEntryNamesBeforeSelectingMetadata() throws IOException {
+    byte[] validMetadata =
+        """
+        name: UniquePlugin
+        version: 1.0.0
+        main: example.UniquePlugin
+        """
+            .getBytes(StandardCharsets.UTF_8);
+    byte[] invalidMetadata = "not: valid: metadata".getBytes(StandardCharsets.UTF_8);
+
+    LinkedHashMap<String, byte[]> validFirst = new LinkedHashMap<>();
+    validFirst.put("plugin.yml", validMetadata);
+    validFirst.put("Plugin.yml", invalidMetadata);
+    Path laterDuplicate = writeJar("later-duplicate.jar", validFirst);
+    renameJarEntry(laterDuplicate, "Plugin.yml", "plugin.yml");
+    assertDuplicateEntry(laterDuplicate);
+
+    LinkedHashMap<String, byte[]> validLast = new LinkedHashMap<>();
+    validLast.put("plugin.yml", invalidMetadata);
+    validLast.put("Plugin.yml", validMetadata);
+    Path earlierDuplicate = writeJar("earlier-duplicate.jar", validLast);
+    renameJarEntry(earlierDuplicate, "Plugin.yml", "plugin.yml");
+    assertDuplicateEntry(earlierDuplicate);
+
+    LinkedHashMap<String, byte[]> duplicateResource = new LinkedHashMap<>();
+    duplicateResource.put("plugin.yml", validMetadata);
+    duplicateResource.put("resource.bin", new byte[] {1});
+    duplicateResource.put("Resource.bin", new byte[] {2});
+    Path resources = writeJar("duplicate-resource.jar", duplicateResource);
+    renameJarEntry(resources, "Resource.bin", "resource.bin");
+    assertDuplicateEntry(resources);
+  }
+
+  @Test
+  void classifiesTamperedSignedNonMetadataEntryAsInvalid() throws Exception {
     Path signedJar = plugins.resolve("signed.jar");
     Path keyStore = plugins.resolve("test-signing.p12");
+    byte[] signedResource = new byte[] {1, 2, 3, 4};
     writeJar(
         signedJar.getFileName().toString(),
-        "plugin.yml",
-        """
-        name: SignedPlugin
-        version: 1.0.0
-        main: example.SignedPlugin
-        """);
+        Map.of("example/SignedPlugin.class", signedResource));
     runJdkTool(
         "keytool",
         "-genkeypair",
@@ -402,14 +686,8 @@ class PluginMetadataDiscoveryTest {
         signedJar.toString(),
         "test-signing");
     try (FileSystem jar = FileSystems.newFileSystem(signedJar)) {
-      Files.writeString(
-          jar.getPath("/plugin.yml"),
-          """
-          name: TamperedPlugin
-          version: 2.0.0
-          main: example.TamperedPlugin
-          """,
-          StandardCharsets.UTF_8);
+      signedResource[signedResource.length - 1] ^= 0x7f;
+      Files.write(jar.getPath("/example/SignedPlugin.class"), signedResource);
     }
 
     MetadataInspection inspection = new PluginMetadataDiscovery().inspect(signedJar);
@@ -460,17 +738,143 @@ class PluginMetadataDiscoveryTest {
         .formatted(dependencies);
   }
 
+  private static String paperMetadataWithDependencies(
+      String legacyField,
+      int legacyCount,
+      int bootstrapCount,
+      boolean bootstrapRequired,
+      boolean bootstrapAfter,
+      int serverCount,
+      boolean serverRequired,
+      boolean serverAfter) {
+    StringBuilder metadata =
+        new StringBuilder(
+            """
+            name: BoundaryPlugin
+            version: 1.0.0
+            main: example.BoundaryPlugin
+            api-version: '1.21'
+            """);
+    metadata
+        .append(legacyField)
+        .append(": [")
+        .append(
+            IntStream.range(0, legacyCount)
+                .mapToObj(index -> "Legacy" + index)
+                .collect(java.util.stream.Collectors.joining(", ")))
+        .append("]\n")
+        .append("dependencies:\n");
+    appendPaperDependencyScope(
+        metadata, "bootstrap", "Bootstrap", bootstrapCount, bootstrapRequired, bootstrapAfter);
+    appendPaperDependencyScope(
+        metadata, "server", "Server", serverCount, serverRequired, serverAfter);
+    return metadata.toString();
+  }
+
+  private static void appendPaperDependencyScope(
+      StringBuilder metadata,
+      String scope,
+      String prefix,
+      int count,
+      boolean required,
+      boolean loadAfter) {
+    metadata.append("  ").append(scope).append(":\n");
+    for (int index = 0; index < count; index++) {
+      metadata
+          .append("    ")
+          .append(prefix)
+          .append(index)
+          .append(":\n")
+          .append("      required: ")
+          .append(required)
+          .append("\n")
+          .append("      load: ")
+          .append(loadAfter ? "AFTER" : "OMIT")
+          .append("\n");
+    }
+  }
+
+  private static String freeTextMetadata(String field, String yamlValue) {
+    StringBuilder metadata =
+        new StringBuilder(
+            """
+            name: TextPlugin
+            main: example.TextPlugin
+            """);
+    if (!field.equals("version")) {
+      metadata.append("version: 1.0.0\n");
+    }
+    return metadata.append(field).append(": ").append(yamlValue).append("\n").toString();
+  }
+
+  private static String paperApiMetadata(String apiVersion) {
+    return """
+        name: PaperApiPlugin
+        version: 1.0.0
+        main: example.PaperApiPlugin
+        """
+        + (apiVersion == null ? "" : "api-version: '" + apiVersion + "'\n");
+  }
+
+  private void assertFreeTextIssue(
+      PluginMetadataDiscovery discovery, String name, String metadata, String expectedIssue)
+      throws IOException {
+    writeJar(name, "plugin.yml", metadata);
+    assertEquals(List.of(expectedIssue), discovery.inspect(plugins.resolve(name)).issues());
+  }
+
   private void writeJar(String name, String entryName, String contents) throws IOException {
     writeJar(name, entryName, contents.getBytes(StandardCharsets.UTF_8));
   }
 
   private void writeJar(String name, String entryName, byte[] contents) throws IOException {
+    writeJar(name, Map.of(entryName, contents));
+  }
+
+  private Path writeJar(String name, Map<String, byte[]> entries) throws IOException {
+    Path artifact = plugins.resolve(name);
     try (JarOutputStream output =
-        new JarOutputStream(Files.newOutputStream(plugins.resolve(name)))) {
-      output.putNextEntry(new JarEntry(entryName));
-      output.write(contents);
-      output.closeEntry();
+        new JarOutputStream(Files.newOutputStream(artifact))) {
+      for (Map.Entry<String, byte[]> entry : entries.entrySet()) {
+        output.putNextEntry(new JarEntry(entry.getKey()));
+        output.write(entry.getValue());
+        output.closeEntry();
+      }
     }
+    return artifact;
+  }
+
+  private static void renameJarEntry(Path artifact, String existing, String replacement)
+      throws IOException {
+    byte[] source = existing.getBytes(StandardCharsets.UTF_8);
+    byte[] target = replacement.getBytes(StandardCharsets.UTF_8);
+    assertEquals(source.length, target.length);
+    byte[] jar = Files.readAllBytes(artifact);
+    int replacements = 0;
+    for (int index = 0; index <= jar.length - source.length; index++) {
+      if (Arrays.equals(jar, index, index + source.length, source, 0, source.length)) {
+        System.arraycopy(target, 0, jar, index, target.length);
+        replacements++;
+        index += source.length - 1;
+      }
+    }
+    assertEquals(2, replacements);
+    Files.write(artifact, jar);
+  }
+
+  private static void assertDuplicateEntry(Path artifact) {
+    MetadataInspection inspection = new PluginMetadataDiscovery().inspect(artifact);
+    assertEquals(MetadataStatus.INVALID, inspection.status());
+    assertNull(inspection.descriptor());
+    assertEquals(List.of("plugin artifact contains duplicate entries"), inspection.issues());
+    assertEquals(List.of("artifact_invalid"), MetadataInspectorMain.issueCodes(inspection.issues()));
+  }
+
+  private static void assertVerificationLimit(MetadataInspection inspection) {
+    assertEquals(MetadataStatus.INVALID, inspection.status());
+    assertNull(inspection.descriptor());
+    assertEquals(List.of("plugin artifact exceeds verification limits"), inspection.issues());
+    assertEquals(List.of("artifact_invalid"), MetadataInspectorMain.issueCodes(inspection.issues()));
   }
 
   private void runJdkTool(String tool, String... arguments) throws Exception {
